--- a/ScoreCard/res/values/strings.xml
+++ b/ScoreCard/res/values/strings.xml
@@ -11,4 +11,13 @@
     <string name="courses">Courses</string>
     <string name="scorecards">Old Scorecards</string>
     
+    <!-- players menu -->
+    <string name="new_player">New Player</string>
+    
+    <!-- edit players menu -->
+    <string name="add_player">Add Player</string>
+    <string name="edit_player">Edit Player</string>
+    <string name="name">Name</string>
+    <string name="save">Save</string>
+
 </resources>
