--- a/ScoreCard/res/values/strings.xml
+++ b/ScoreCard/res/values/strings.xml
@@ -19,9 +19,14 @@
     <string name="edit_player">Edit Player</string>
     <string name="name">Name</string>
     <string name="save">Save</string>
-    <string name="delete_title">Delete Player?</string>
+
+	<!-- delete dialog -->
+	<string name="delete_title">Delete?</string>
     <string name="delete_message">Are you sure you wish to delete %s?</string>
     <string name="confirm_delete">Yes</string>
     <string name="cancel_delete">No</string>
+        
+    <!-- course menu -->
+    <string name="new_course">New Course</string>
 
 </resources>
