Adding a central NewGameActivity to launch the other activities for setting up a new game.

--- a/ScoreCard/res/values/strings.xml
+++ b/ScoreCard/res/values/strings.xml
@@ -2,8 +2,11 @@
 
     <!-- app settings -->
     <string name="app_name">Scorecard</string>
-    <string name="version_name">0.0.2</string>
-    <string name="friendly_version_name">version 0.0.2</string>
+    <string name="version_name">0.0.3</string>
+    <string name="friendly_version_name">version 0.0.3</string>
+
+    <!-- loading screen -->
+    <string name="loading">Loading…</string>
 
     <!-- main menu -->
     <string name="new_game">New Game</string>
