--- a/ScoreCard/res/values/strings.xml
+++ b/ScoreCard/res/values/strings.xml
@@ -52,4 +52,9 @@
 	<string name="hole_label">"Hole "</string>
 	<string name="par_label">Par</string>
 
+	<!-- scorecard -->
+	<string name="scorecard_hole_label">"Hole "</string>
+	<string name="scorecard_par_label">"Par "</string>
+	<string name="average">"Avg: "</string>
+	<string name="total">"Total: "</string>
 </resources>
