--- a/ScoreCard/res/values/strings.xml
+++ b/ScoreCard/res/values/strings.xml
@@ -2,8 +2,8 @@
 
     <!-- app settings -->
     <string name="app_name">Scorecard</string>
-    <string name="version_name">0.0.3</string>
-    <string name="friendly_version_name">version 0.0.3</string>
+    <string name="version_name">0.1.0</string>
+    <string name="friendly_version_name">version 0.1.0</string>
 
     <!-- loading screen -->
     <string name="loading">Loading…</string>
@@ -58,4 +58,7 @@
 	<string name="average">"Avg: "</string>
 	<string name="total">"Total: "</string>
 	<string name="no_average">N/A</string>
+
+	<!-- misc views -->
+	<string name="positive_prefix">+</string>
 </resources>
